--- a/src/main/resources/templates/plan/plan2.html
+++ b/src/main/resources/templates/plan/plan2.html
@@ -1200,7 +1200,7 @@
         $(document).on('click','.plus',function () {
             if(places[index].length < 9) {
                 // 이름 가져오기
-                const areaname = $(this).prev('div').children('div').text();
+                const areaname = $(this).prev('div').children('a').eq(0).text();
                 console.log(areaname);
 
                 // 위치 가져오기
@@ -1249,7 +1249,7 @@
 
         places[index].forEach(function (data) { // places[index] 배열에 있는 모든 오브젝트를 반복문을 돌려 출력합니다
             var template = `
-                        <div href='#' class='list-group-item list-group-item-action py-3 lh-tight' aria-current='true' data-id='${data.contentid}'>
+                        <div class='list-group-item list-group-item-action py-3 lh-tight' aria-current='true' data-id='${data.contentid}'>
                             <div class='d-flex w-100 align-items-center justify-content-between'>
                                 <strong class='mb-1 select-title'>${data.title}</strong>
                                 <button class='delete' type='button' onclick='deleteRow(this);'>
@@ -1535,7 +1535,7 @@
             <!--장소찾기-->
             <div id="select_item" class="vh-100 d-flex flex-column align-items-stretch bg-white" style="width: 380px;">
                 <div class="d-flex flex-column p-3">
-                    <span class="fs-5 fw-semibold planner-name">플래너 이름</span><br>
+                    <span class="fs-5 fw-semibold planner-name">플래너 이름</span>
                     <span class="planner-date text-secondary">날짜</span>
                 </div>
                 <div class="search-bar">
@@ -1567,7 +1567,7 @@
                             <th:block th:if="${pageResponse.total > 0}" th:each="touritem : ${pageResponse.dtoList}">
 
                                 <!--선택된 객체에는 active 클래스를 주면 파란 배경이 됨-->
-                                <a class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+                                <div class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
                                     <div class="d-flex w-100 align-items-center justify-content-between">
                                         <!-- 이미지 출력하기 -->
                                         <div style="width: 60px; height: 60px;">
@@ -1576,10 +1576,13 @@
                                         </div>
 
                                         <div th:title="${touritem.title}" class="ps-3">
-                                            <input type="hidden" th:id="mapx" th:value="${touritem.mapx}">
-                                            <input type="hidden" th:id="mapy" th:value="${touritem.mapy}">
-                                            <input type="hidden" th:id="contentId" th:value="${touritem.contentid}">
-                                            <div class="content-title" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}" th:text="${touritem.title}"></div>
+                                            <input type="hidden" th:id="mapx${touritem.contentid}" th:value="${touritem.mapx}">
+                                            <input type="hidden" th:id="mapy${touritem.contentid}" th:value="${touritem.mapy}">
+                                            <input type="hidden" th:id="contentId${touritem.contentid}" th:value="${touritem.contentid}">
+                                            <input type="hidden" th:id=""
+                                            <a th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
+                                                <div class="content-title" th:text="${touritem.title}"></div>
+                                            </a>
                                             <p class="content-address" th:text="${touritem.address}"></p>
                                         </div>
 
@@ -1591,7 +1594,7 @@
                                     <div class="col-10 mb-1 small" >
                                         <label th:text="${touritem.fullCategoryName}"></label>
                                     </div>
-                                </a>
+                                </div>
                             </th:block>
 
 
