--- a/src/main/resources/templates/plan/showplan2.html
+++ b/src/main/resources/templates/plan/showplan2.html
@@ -1248,7 +1248,7 @@
                 <div class="flex-sm-row flex-column d-flex justify-content-center">
                     <div class="col-sm-9 col-12 px-0 mb-2">
                         <div class="input-daterange">
-                            <input id="days" name="days" type="date" class="form-control" th:placeholder="${startDateString} + ' ~ ' + ${endDateString}" th:value="${startDateString} + ' ~ ' + ${endDateString}">
+                            <input id="days" name="days" type="date" class="form-control" th:placeholder="${startDateString} + ' ~ ' + ${endDateString}">
                         </div>
                     </div>
                 </div>
