--- a/src/main/resources/templates/tourinfo/content.html
+++ b/src/main/resources/templates/tourinfo/content.html
@@ -319,6 +319,7 @@
         #myCarousel img {
             height: 400px;
             object-fit: cover;
+            width: 100%;
         }
 
         #wrap {
@@ -491,17 +492,18 @@
                                             </div>
                                         </th:block>
                                     </div>
-
-                                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
-                                            data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Previous</span>
-                                    </button>
-                                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
-                                            data-bs-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Next</span>
-                                    </button>
+                                    <th:block th:if="${response.imagesURL.size() > 1}">
+                                        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
+                                                data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
+                                                data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
+                                    </th:block>
                                 </div>
                             </div>
                         </th:block>
