--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -1060,7 +1060,7 @@
             $(".btn_optimize").click(function () {
                 // 마커가 3곳 이상이 아니면 실행되지 않도록 막음
                 if(viaMarkers[index].length < 3) {
-                    alert('경유지는 1개 이상이어야합니다.');
+                    alert('여행지를 3곳 이상 추가해주세요.');
                     return false;
                 } else {
                     var headers = {};
@@ -1182,7 +1182,7 @@
             $(".btn_route").click(function () {
                 // 마커가 3곳 이상이 아니면 실행되지 않도록 막음
                 if(viaMarkers[index].length < 3) {
-                    alert('경유지는 1개 이상이어야합니다.');
+                    alert('여행지를 3곳 이상 추가해주세요.');
                     return false;
                 } else {
                     var headers = {};
